[package]
name = "sd"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.122"
termimad = "0.29.4"
tokio = { version = "1.39.2", features = ["full"] }
